--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 gl = "0.14.0"
 glam = "0.20.5"
+image = "0.24.3"
+lazy_static = "1.4.0"
 
 [dependencies.glfw]
 git = "https://github.com/bjz/glfw-rs.git"
