--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ gl = "0.14.0"
 glam = "0.20.5"
 image = "0.24.3"
 lazy_static = "1.4.0"
+rage_macros = { path = "macros", version = "0.1.0" }
 
 [dependencies.glfw]
 git = "https://github.com/bjz/glfw-rs.git"
