--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 gl = "0.14.0"
 glam = "0.20.5"
 image = "0.24.3"
+openal = "0.2.2"
 lazy_static = "1.4.0"
 rage_macros = { path = "macros", version = "0.1.0" }
 
